# slisp

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  slisp
src/: environment.cpp  environment.hpp  expression.cpp  expression.hpp  interpreter.cpp  interpreter.hpp  interpreter_semantic_error.hpp  main.cpp  tokenize.cpp  tokenize.hpp
tests/: test_interpreter.cpp  test_tokenize.cpp  test_types.cpp
